Fixed about image overflow

--- a/src/Containers/About/About.scss
+++ b/src/Containers/About/About.scss
@@ -3,7 +3,6 @@
   width: 100%;
   flex-direction: column;
 }
-
 .app__profiles {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -60,7 +59,7 @@
   left: 0;
   bottom: 0;
   height: 100%;
-  width: 100%;
+  width: fit-content;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -71,7 +70,7 @@
     width: 260px;
   }
   img {
-    width: 100%;
+    width: 90%;
     height: 170px;
     border-radius: 15px;
     object-fit: cover;
